--- a/app/src/main/res/layout/activity_ad_mob.xml
+++ b/app/src/main/res/layout/activity_ad_mob.xml
@@ -14,13 +14,14 @@
         android:textAlignment="center"
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="32dp"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginRight="32dp"
         android:textSize="18sp"/>
 
-    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -44,9 +45,9 @@
         android:text="@string/button_text_wait"
         style="@style/Base.Widget.AppCompat.Button.Colored"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="32dp"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginRight="32dp"
         android:layout_marginBottom="32dp"
         android:layout_marginTop="8dp"
