--- a/app/src/main/res/layout/activity_ocr_capture.xml
+++ b/app/src/main/res/layout/activity_ocr_capture.xml
@@ -39,6 +39,21 @@
             android:visibility="gone"
             android:onClick="switchFlash"/>
 
+        <TextView
+            android:id="@+id/overlay_finding_ticket"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="4dp"
+            android:textSize="16sp"
+            android:text="@string/activity_ocr_finding_receipt"
+            android:background="@drawable/text_overlay_background"
+            android:textColor="@color/md_grey_300"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.95"/>
+
     </android.support.constraint.ConstraintLayout>
 
 </layout>
