--- a/app/src/main/res/layout/dialog_tip.xml
+++ b/app/src/main/res/layout/dialog_tip.xml
@@ -46,6 +46,7 @@
             app:layout_constraintEnd_toEndOf="@+id/dialog_tip_hint"
             android:layout_marginTop="32dp"
             app:bsb_rtl="@bool/is_rtl"
+            app:bsb_touch_to_seek="true"
             app:layout_constraintTop_toBottomOf="@+id/dialog_tip_hint" />
 
         <TextView
