--- a/app/src/main/res/layout/activity_ocr_capture.xml
+++ b/app/src/main/res/layout/activity_ocr_capture.xml
@@ -46,8 +46,27 @@
             android:padding="4dp"
             android:textSize="16sp"
             android:text="@string/activity_ocr_finding_receipt"
+            android:textAlignment="center"
             android:background="@drawable/text_overlay_background"
             android:textColor="@color/md_grey_300"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.95"/>
+
+        <TextView
+            android:id="@+id/overlay_recognising_ticket"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="4dp"
+            android:textSize="16sp"
+            android:text="@string/activity_ocr_recognising_receipt"
+            android:textAlignment="center"
+            android:background="@drawable/text_overlay_background"
+            android:textColor="@color/md_grey_300"
+            android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
