Fixed blurry drawable on pre-lollipop devices

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -52,8 +52,8 @@
                 android:adjustViewBounds="false"
                 android:contentDescription="@string/content_description_receipt_icon"
                 android:cropToPadding="false"
-                android:tint="@android:color/white"
-                app:srcCompat="@drawable/ic_receipt_black_24dp"
+                app:srcCompat="@drawable/ic_receipt_white_128dp"
+                android:scaleType="fitXY"
                 android:layout_marginLeft="8dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
